--- a/CIS3490_A2/makefile
+++ b/CIS3490_A2/makefile
@@ -1,5 +1,5 @@
 CC = gcc
-CFLAGS = -Wall -std=c99 -pedantic -g
+CFLAGS = -Wall -std=c99 -pedantic -lm -g
 
 all: main.c
 	$(CC) $(CFLAGS) p11.c p12.c p21.c p22.c main.c -o cis3490a2
