--- a/CIS3490_A3/makefile
+++ b/CIS3490_A3/makefile
@@ -2,5 +2,5 @@ CC = gcc
 CFLAGS = -Wall -std=c99 -pedantic -lm -g
 
 all: main.c
-	$(CC) $(CFLAGS) p11.c p12.c p21.c p22.c main.c -o cis3490a3
+	$(CC) $(CFLAGS) p11.c p12.c p21.c p22.c p23.c main.c -o cis3490a3
 
