--- a/CIS3490_A4/makefile
+++ b/CIS3490_A4/makefile
@@ -2,5 +2,5 @@ CC = gcc
 CFLAGS = -Wall -std=c99 -pedantic -g
 
 all: main.c
-	$(CC) $(CFLAGS) p1.c main.c -o cis3490a4
+	$(CC) $(CFLAGS) p1.c p2.c main.c -o cis3490a4
 
